# proiect-bd

./: Dockerfile  README.md  docker-compose.yml  monopoly_create.sql  monopoly_insert.sql
.github/workflows/: docker-publish.yml  web-checks.yml
documents/: Script_Soare_Mihai_G152.txt
scripts/: init-monopoly.sh  lock-system.sql  print-connection-info.sh
web/: Dockerfile  app.py  db.py  pyproject.toml
web/templates/: base.html  game.html  index.html
